# zero2prod

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20241013115920_create_subscriptions_table.sql
src/: configuration.rs  main.rs
tests/: health_check.rs
